tree-sitter/grammar.js
    source_file: $ => seq(
      $.module_declaration,
      repeat($.import_declaration),
      repeat($._declaration),
    ),

    // ========== MODULE DECLARATION ==========
    module_declaration: $ => seq(
      'module',
      field('name', $.module_identifier),
      field('exports', $.exposing_list),
    ),

    // Module identifier: composed of type_identifiers joined by dots
    // We parse it as a sequence rather than a regex to avoid token conflicts
    module_identifier: $ => prec.right(seq(
      $._module_segment,
      repeat(seq('.', $._module_segment)),
    )),

    // Module segment: reuse type_identifier token to avoid conflicts
    _module_segment: $ => $.type_identifier,

    exposing_list: $ => seq(
      'exposing',
      '(',
      sepBy(',', $.exposing_item),
      ')',
    ),

    exposing_item: $ => choice(
      seq(
        field('name', $.type_identifier),
        optional($.expose_all),
      ),
      field('name', $.identifier),
      field('name', $.operator_identifier),
    ),

    expose_all: $ => '(..)',

    // ========== IMPORTS ==========
    _declaration: $ => choice(
      $.type_declaration,
      $.type_alias_declaration,
      $.newtype_declaration,
      $.class_declaration,
      $.instance_declaration,
      $.foreign_import_declaration,
      $.type_signature,
      $.function_declaration,
      $.annotated_declaration,
    ),

    // Annotation (@derive, @primaryKey, etc.)
    // Use token.immediate to ensure ( is parsed with the annotation
    type_declaration: $ => seq(
      'type',
      field('name', $.type_identifier),
      field('parameters', repeat($.type_variable)),
      '=',
      field('constructors', $.constructor_list),
    ),

    constructor_list: $ => sepBy1('|', $.constructor_definition),

    // Constructor in ADT: name followed by type parameters
    // Use prec.right to consume all following type atoms greedily
    constructor_definition: $ => prec.right(PREC.CALL + 1, seq(
      field('name', $.constructor_identifier),
      field('parameters', repeat($._type_atom)),
    )),

    // Type alias: type alias Config = { port : Int, host : String }
    type_alias_declaration: $ => seq(
      'type',
      'alias',
      field('name', $.type_identifier),
      field('parameters', repeat($.type_variable)),
      '=',
      field('type', $._type),
    ),

    // Newtype: newtype Parser a = Parser (String -> Maybe (a, String))
    newtype_declaration: $ => seq(
      'newtype',
      field('name', $.type_identifier),
      field('parameters', repeat($.type_variable)),
      '=',
      field('constructor', $.constructor_identifier),
      field('type', $._type),
    ),

    // Class declaration - right assoc to consume all methods
    type_signature: $ => seq(
      field('name', $._function_name),
      ':',
      field('type', $.qualified_type),
    ),

    // Function/value declaration: main = do ...
    function_declaration: $ => seq(
      field('name', $._function_name),
      field('parameters', repeat($._pattern_atom)),
      '=',
      field('body', $._expression),
    ),

    _function_name: $ => choice(
      $.identifier,
      $.operator_identifier,
    ),

    qualified_type: $ => seq(
      optional(seq($.constraint_list, '=>')),
      $._type,
    ),

    constraint_list: $ => choice(
      $.constraint,
      seq('(', sepBy1(',', $.constraint), ')'),
    ),

    // A constraint is a class applied to type arguments
    // e.g. "Show a" or "Functor f"
    constraint: $ => prec(3, seq(
      field('class', $.type_identifier),
      field('arguments', repeat1($.type_variable)),
    )),

    _type: $ => $.function_type,

    function_type: $ => prec.right(PREC.ARROW, sepBy1('->', $.type_application)),

    // Type application: binary left-associative like Haskell tree-sitter
    // f a b parses as ((f a) b) rather than f (a, b)
    type_application: $ => choice(
      prec.left(PREC.CALL, seq(
        field('constructor', $.type_application),
        field('argument', $._type_atom),
      )),
      $._type_atom,
    ),

    _type_atom: $ => choice(
      $.type_identifier,
      $.type_variable,
      $.record_type,
      $.parenthesized_type,
      $.tuple_type,
      $.unit_type,
    ),

    parenthesized_type: $ => seq('(', $._type, ')'),

    tuple_type: $ => seq(
      '(',
      $._type,
      repeat1(seq(',', $._type)),
      ')',
    ),

    record_type: $ => seq(
      '{',
      sepBy(',', $.record_type_field),
      '}',
    ),

    record_type_field: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._type),
      repeat($.field_annotation),
    ),

    _upper_identifier: $ => /[A-Z][a-zA-Z0-9_#]*/,
    type_identifier: $ => alias($._upper_identifier, $.type_identifier),
    // Type variables use external scanner to avoid consuming function declarations
    type_variable: $ => $._type_variable_ext,
    constructor_identifier: $ => alias($._upper_identifier, $.constructor_identifier),

    // ========== EXPRESSIONS ==========
    _expression: $ => choice(
      $.let_expression,
      $.case_expression,
      $.lambda_expression,
      $.do_expression,
      $.if_expression,
      $._binary_expression,
    ),

    _binary_expression: $ => choice(
      $.backward_pipe_expression,
      $.forward_pipe_expression,
      $.binary_expression,
      $._application_expression,
    ),

    binary_expression: $ => prec.left(PREC.CONCAT, seq(
      field('left', $._application_expression),
      field('operator', $.operator),
      field('right', $._binary_expression),
    )),

    _application_expression: $ => choice(
      $.function_application,
      $._accessor_expression,
    ),

    case_expression: $ => prec.right(seq(
      'case',
      field('scrutinee', $._expression),
      'of',
      $._virtual_open_section,  // Opens layout block
      field('alternatives', $.case_alternative),
      field('alternatives', repeat(seq($._virtual_end_decl, $.case_alternative))),
      optional($._virtual_end_section),
    )),

    case_alternative: $ => seq(
      field('pattern', $._pattern),
      '->',
      field('body', $._expression),
    ),

    // Lambda expression
    _pattern: $ => choice(
      $.constructor_pattern,
      $._pattern_atom,
    ),

    // Constructor pattern with arguments needs lower precedence than function application
    // so expressions win in ambiguous contexts (like do-blocks before seeing <-)
    constructor_pattern: $ => prec.left(-1, seq(
      field('constructor', $.constructor_identifier),
      field('arguments', repeat1($._pattern_atom)),
    )),

    _pattern_atom: $ => choice(
      $.wildcard_pattern,
      $.variable_pattern,
      $.literal_pattern,
      $.list_pattern,
      $.tuple_pattern,
      $.parenthesized_pattern,
      $.record_pattern,
      $.nullary_constructor_pattern,
    ),

    // Nullary constructor pattern - needs lower precedence than expressions
    wildcard_pattern: $ => '_',

    // Use external scanner identifier for patterns too (same as expressions)
    // Lower precedence than expressions
    variable_pattern: $ => prec(-2, alias($._identifier_ext, $.identifier)),

    // Lower precedence than expressions so they win in ambiguous contexts
    literal_pattern: $ => prec(-1, choice(
      $.integer_literal,
      $.float_literal,
      $.char_literal,
      $.string_literal,
    )),

    list_pattern: $ => seq(
      '[',
      sepBy(',', $._pattern),
      ']',
    ),

    tuple_pattern: $ => seq(
      '(',
      $._pattern,
      repeat1(seq(',', $._pattern)),
      ')',
    ),

    parenthesized_pattern: $ => seq('(', $._pattern, ')'),

    record_pattern: $ => seq(
      '{',
      sepBy(',', $.record_pattern_field),
      '}',
    ),

    record_pattern_field: $ => seq(
      field('name', $.identifier),
      optional(seq('=', field('pattern', $._pattern))),
    ),

    // ========== LITERALS ==========
    // Internal identifier token for non-expression contexts
    identifier: $ => $._identifier_token,

    // The word token - this must be an internal regex for tree-sitter keyword handling
    _identifier_token: $ => /[a-z_][a-zA-Z0-9_]*/,

    integer_literal: $ => choice(
      /0[xX][0-9a-fA-F]+/,
      /0[oO][0-7]+/,
      /0[bB][01]+/,
      /[0-9]+/,
    ),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.escape_sequence,
        alias($._string_content, $.string_content),
        $.interpolation,
      )),
      '"',
    ),

    // Content inside strings - avoid ", \, and $ (start of interpolation)
    _string_content: $ => token.immediate(prec(1, /[^"\\$]+/)),

    operator: $ => choice(
      '<>',
      '++',
      '&&',
      '||',
      '==',
      '/=',
      '<=',
      '>=',
      '<',
      '>',
      '+',
      '-',
      '*',
      '/',
      '^',
      '|>',
      '<|',
      '>>',
      '<<',
      '$',
    ),

    // ========== COMMENTS ==========
